# movieposters

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
movieposters/: __init__.py  errors.py  headers.py  imdbapi.py
tests/: test_movieposters.py
