[tool.poetry]
name = "movieposters"
version = "0.1.0"
description = "A simple Python package to get the link a movie's poster given its title."
authors = ["Thomas Breydo <tbreydo@gmail.com>"]
license = "GNU"

[tool.poetry.dependencies]
python = "^3.7"
beautifulsoup4 = "^4.9.0"
lxml = "^4.5.0"
urllib3 = "^1.25.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
