[tool.poetry]
name = "movieposters"
version = "0.0.6"
description = "A simple Python package to get the link a movie's poster given its title."
authors = ["Thomas Breydo <tbreydo@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/thomasbreydo/movieposters"
repository = "https://github.com/thomasbreydo/movieposters"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
]
include = ["README.md"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
twine = "^4.0.1"
build = "^0.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
