[metadata]
name = movieposters
version = attr: movieposters.__version__
author = Thomas Breydo
author_email = tbreydo@gmail.com
description = "A simple Python package to get the link a movie's poster given its title."
	Code = https://github.com/thomasbreydo/movieposters
classifiers = 
	Development Status :: 5 - Production/Stable
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Operating System :: OS Independent
	Programming Language :: Python

[options]
packages = find:
install_requires = 
	beautifulsoup4==4.9.0
	lxml==4.5.0
	urllib3==1.25.9
include_package_data = true
